# YOLO-Interactive-Detection

./: .flake8  .gitignore  README.md  add_object_info.py  main.py  pyproject.toml  requirements.txt
database/: data_database.py  info_database.py
dotenv_files/: .env-example
scripts/: add_object_info.py
src/yolo_detector/: config.py  main.py
src/yolo_detector/database/: connection.py  operations.py
src/yolo_detector/ui/: mouse.py
utils/: functions.py  mouse_events.py
