
[project]
name = "yolo_detector"
version = "0.1.0"
description = "Sistema de Detecção de Objetos com YOLOv8 e MySQL"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Pedro Tenório", email = "pstsouza13@gmail.com" }]

# Dependências de produção (adicione com 'uv add' ou manualmente)
dependencies = [
    "mysql-connector-python>=8.0.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "ultralytics>=8.0.0",
]

[project.urls]
# TODO: Adicione o link do repositório quando ele existir

[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]

[project.optional-dependencies]
# Dependências de desenvolvimento padrão
dev = [
    "ruff",
    "pyright",
    "pytest",
    "pytest-xdist"
]

[project.scripts]
# Define os comandos de console. A chave ('yolo_detector') é o comando.
# O valor aponta para 'yolo_detector.main:run_from_script'.
# Ex: 'my_package.main:run' -> src/my_package/main.py (e a função run lá dentro).
# Lembre-se de sincronizar o nome do pacote com 'known-first-party' do Ruff.

# Inicia a app
yolo_detector = "yolo_detector.main:main"

# Adicionar objetos
yolo_add = "scripts.add_object_info:main"

# ============================
# Build System
# ============================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yolo_detector"]

# ============================
# Ferramentas: Ruff (Linter & Formatter)
# ============================
[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]
fix = true
show-fixes = true
indent-width = 4
exclude = [
    "venv", ".venv", "env", ".env", "node_modules", "__pycache__"
]

[tool.ruff.lint]
# Seleção rigorosa de regras para manter o código limpo desde o dia 1
select = [
    "ASYNC", "A", "ANN", "B", "BLE", "C4", "C90", "COM", "E", "EM",
    "ERA", "EXE", "F", "FBT", "FIX", "I", "ICN", "ISC", "Q", "RET",
    "RSE", "S", "SIM", "SLF", "T10", "T20", "TC", "TD", "TRY", "UP",
    "W", "YTT", "RUF", "N"
]
ignore = ["T201", "COM812"] # T201 permite print (útil em scripts simples)

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "S101"] # Ignora tipos de retorno e asserts em testes

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
# Ensina ao Ruff qual é o pacote principal do seu projeto.
# Deve ser o mesmo nome da pasta dentro de 'src/'.
known-first-party = ["yolo_detector"]

# ============================
# Ferramentas: Pyright (Type Checker)
# ============================
[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.11"
include = ["src", "tests", "scripts"]
exclude = [
    "**/venv", "**/.venv", "**/env", "**/.env",
    "**/node_modules", "**/__pycache__"
]
venv = ".venv"
venvPath = "."
executionEnvironments = [{ root = "src" }]

# ============================
# Ferramentas: Pytest
# ============================
[tool.pytest.ini_options]
addopts = "-s --color=yes --tb=short"
pythonpath = ["src"]
testpaths = ["tests"]
